# gwydd12.github.io

./: .gitignore  README.md  about.html  about.md  about.rst  contact.markdown  gwydd-ch.cabal  gwydd-se.cabal  index.html  robots.txt  site.hs
css/: color.css  default.css  latex.css  syntax.css
docs/: CNAME  about.html  archive.html  articles.html  atom.xml  contact.html  index.html  notes.html  reviews.html
docs/articles/: the-preface-of-this-blog.html
docs/css/: color.css  default.css  latex.css  syntax.css
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  carpe-diem.html  the-preface-of-this-blog.html
docs/reviews/: the-stranger.html
posts/: 2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  carpe-diem.markdown  the-preface-of-this-blog.markdown
reviews/: the-stranger.markdown
templates/: all-posts.html  archive.html  article.html  articles.html  default.html  note.html  notes.html  reviews.html
