name:               gwydd-se
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , time >= 1.8
                  , pandoc 
                  , pandoc-sidenote
                  , pandoc-types >= 1.22.2.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
